--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -116,6 +116,7 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem;
+  display: none;
   position: relative;
 }
 .Wrapper .grid .galleryHeading {
@@ -161,6 +162,7 @@
   padding-top: 3rem;
   position: relative;
   height: fit-content;
+  display: none;
 }
 .Wrapper .slider .sliderHeading {
   display: flex;
@@ -238,6 +240,7 @@
   flex-direction: column;
   gap: 0;
   margin-top: 2rem;
+  display: none;
 }
 .Wrapper #about .aboutHeading {
   display: flex;
@@ -350,6 +353,7 @@
   flex-direction: column;
   gap: 2rem;
   height: 100vh;
+  display: none;
 }
 .Wrapper #testimonials .testimonialHeading {
   display: flex;
@@ -448,6 +452,7 @@
   gap: 0;
   padding: 2rem;
   position: relative;
+  display: none;
 }
 .Wrapper #contact img {
   height: 42rem;
@@ -496,6 +501,7 @@
   align-items: center;
   flex-direction: row;
   gap: 0;
+  display: none;
 }
 .Wrapper .footer p {
   color: #fff;
@@ -509,4 +515,33 @@
   border-radius: 50%;
   z-index: 50;
   display: none;
+}
+
+@media (max-width: 840px) {
+  .Wrapper #Navbar {
+    padding: 0;
+    background-color: #b3b1b1;
+  }
+  .Wrapper #Navbar .container-fluid {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    flex-direction: row;
+    gap: 0;
+    position: relative;
+  }
+  .Wrapper #Navbar .container-fluid .d-flex {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    background-color: #b3b1b1;
+    top: 50px;
+    width: 100%;
+    padding-left: 1rem;
+    left: 0;
+    margin: 0;
+  }
 }
