--- a/Homepage.scss
+++ b/Homepage.scss
@@ -67,7 +67,7 @@ $WorkSans: "Work Sans", sans-serif;
 			.carousel-control-prev,
 			.carousel-control-next {
 				z-index: 2;
-				width: 40%;
+				width: 30%;
 				opacity: 0;
 			}
 		}
@@ -103,6 +103,24 @@ $WorkSans: "Work Sans", sans-serif;
 					font-family: "Courier Prime", monospace;
 				}
 			}
+		}
+		.custom-prev,
+		.custom-next {
+			@include fontStyle(1.5rem, "", "");
+			position: absolute;
+			z-index: 2;
+			background: transparent;
+			border: none;
+			outline: none;
+			color: #fff;
+		}
+		.custom-prev {
+			bottom: 0.5rem;
+			left: 40%;
+		}
+		.custom-next {
+			bottom: 0.5rem;
+			right: 40%;
 		}
 	}
 	.grid {
@@ -428,6 +446,16 @@ $WorkSans: "Work Sans", sans-serif;
 			.container-fluid {
 				@include flex(row, 0, space-between, start);
 				position: relative;
+				#cross,
+				#lines {
+					@include fontStyle(1.4rem, "", "");
+					padding: 1rem 0.5rem 0 0;
+					border: none;
+					color: #fff;
+				}
+				#cross {
+					display: none;
+				}
 				.d-flex {
 					@include flex(column, 1rem, center, start);
 					position: absolute;
@@ -438,6 +466,43 @@ $WorkSans: "Work Sans", sans-serif;
 					left: 0;
 					margin: 0;
 				}
+			}
+		}
+		#HeroSection {
+			.carousel {
+				.carousel-control-prev,
+				.carousel-control-next {
+					width: 20%;
+				}
+			}
+
+			.text-wrapper {
+				@include flex(row, 0, center, start);
+				.heading {
+					margin-top: 2rem;
+					h1 {
+						@include fontStyle(3.5rem, 500, 1.1em);
+					}
+				}
+				.subtitle {
+					h4 {
+						text-align: center;
+						position: absolute;
+						width: 100%;
+					}
+				}
+			}
+			.custom-prev,
+			.custom-next {
+				@include fontStyle(1rem, "", "");
+			}
+			.custom-prev {
+				bottom: 1rem;
+				left: 10%;
+			}
+			.custom-next {
+				bottom: 1rem;
+				right: 10%;
 			}
 		}
 	}
