--- a/Homepage.scss
+++ b/Homepage.scss
@@ -125,7 +125,6 @@ $WorkSans: "Work Sans", sans-serif;
 	}
 	.grid {
 		@include flex(column, 2rem, center, center);
-		display: none;
 		.galleryHeading {
 			@include flex(row, 0, center, center);
 			margin-top: 3rem;
@@ -147,6 +146,7 @@ $WorkSans: "Work Sans", sans-serif;
 			div {
 				img {
 					transition: all 0.4s ease-in-out !important;
+					margin-bottom: 24px;
 				}
 				img:hover {
 					transform: scale(1.03);
@@ -438,36 +438,8 @@ $WorkSans: "Work Sans", sans-serif;
 	}
 }
 
-@media (max-width: 840px) {
+@media (max-width: 640px) {
 	.Wrapper {
-		#Navbar {
-			padding: 0;
-			background-color: #b3b1b1;
-			.container-fluid {
-				@include flex(row, 0, space-between, start);
-				position: relative;
-				#cross,
-				#lines {
-					@include fontStyle(1.4rem, "", "");
-					padding: 1rem 0.5rem 0 0;
-					border: none;
-					color: #fff;
-				}
-				#cross {
-					display: none;
-				}
-				.d-flex {
-					@include flex(column, 1rem, center, start);
-					position: absolute;
-					background-color: #b3b1b1;
-					top: 50px;
-					width: 100%;
-					padding-left: 1rem;
-					left: 0;
-					margin: 0;
-				}
-			}
-		}
 		#HeroSection {
 			.carousel {
 				.carousel-control-prev,
@@ -503,6 +475,73 @@ $WorkSans: "Work Sans", sans-serif;
 			.custom-next {
 				bottom: 1rem;
 				right: 10%;
+			}
+		}
+		.grid {
+			@include flex(column, 0, center, center);
+			.galleryHeading {
+				@include flex(column, 0, center, center);
+				width: 100%;
+				h1 {
+					@include fontStyle(2rem, 600, "");
+				}
+				p {
+					@include fontStyle(1rem, 500, "");
+					width: 90%;
+					padding: 0;
+				}
+			}
+			.row {
+				align-items: center;
+				justify-content: center;
+				width: 100%;
+				div {
+					width: 115px;
+					padding: 7px;
+					img {
+						margin-bottom: 14px;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media (min-width: 840px) {
+	#cross,
+	#lines {
+		display: none;
+	}
+}
+
+@media (max-width: 840px) {
+	.Wrapper {
+		#Navbar {
+			padding: 0;
+			background-color: #b3b1b1;
+			.container-fluid {
+				@include flex(row, 0, space-between, start);
+				position: relative;
+				#cross,
+				#lines {
+					@include fontStyle(1.4rem, "", "");
+					padding: 1rem 0.5rem 0 0;
+					border: none;
+					color: #fff;
+				}
+				#cross {
+					display: none;
+				}
+				.d-flex {
+					@include flex(column, 1rem, center, start);
+					position: absolute;
+					background-color: #b3b1b1;
+					top: 50px;
+					width: 100%;
+					padding-left: 1rem;
+					left: 0;
+					margin: 0;
+				}
 			}
 		}
 	}
