--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -136,7 +136,6 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  display: none;
   position: relative;
 }
 .Wrapper .grid .galleryHeading {
@@ -167,6 +166,7 @@
 }
 .Wrapper .grid .row div img {
   transition: all 0.4s ease-in-out !important;
+  margin-bottom: 24px;
 }
 .Wrapper .grid .row div img:hover {
   transform: scale(1.03);
@@ -537,6 +537,91 @@
   display: none;
 }
 
+@media (max-width: 640px) {
+  .Wrapper #HeroSection .carousel .carousel-control-prev,
+  .Wrapper #HeroSection .carousel .carousel-control-next {
+    width: 20%;
+  }
+  .Wrapper #HeroSection .text-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: row;
+    gap: 0;
+  }
+  .Wrapper #HeroSection .text-wrapper .heading {
+    margin-top: 2rem;
+  }
+  .Wrapper #HeroSection .text-wrapper .heading h1 {
+    font-size: 3.5rem;
+    font-weight: 500;
+    line-height: 1.1em;
+  }
+  .Wrapper #HeroSection .text-wrapper .subtitle h4 {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+  }
+  .Wrapper #HeroSection .custom-prev,
+  .Wrapper #HeroSection .custom-next {
+    font-size: 1rem;
+    font-weight: "";
+    line-height: "";
+  }
+  .Wrapper #HeroSection .custom-prev {
+    bottom: 1rem;
+    left: 10%;
+  }
+  .Wrapper #HeroSection .custom-next {
+    bottom: 1rem;
+    right: 10%;
+  }
+  .Wrapper .grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+  }
+  .Wrapper .grid .galleryHeading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    width: 100%;
+  }
+  .Wrapper .grid .galleryHeading h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: "";
+  }
+  .Wrapper .grid .galleryHeading p {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: "";
+    width: 90%;
+    padding: 0;
+  }
+  .Wrapper .grid .row {
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .Wrapper .grid .row div {
+    width: 115px;
+    padding: 7px;
+  }
+  .Wrapper .grid .row div img {
+    margin-bottom: 14px;
+  }
+}
+@media (min-width: 840px) {
+  #cross,
+  #lines {
+    display: none;
+  }
+}
 @media (max-width: 840px) {
   .Wrapper #Navbar {
     padding: 0;
@@ -575,43 +660,5 @@
     padding-left: 1rem;
     left: 0;
     margin: 0;
-  }
-  .Wrapper #HeroSection .carousel .carousel-control-prev,
-  .Wrapper #HeroSection .carousel .carousel-control-next {
-    width: 20%;
-  }
-  .Wrapper #HeroSection .text-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: row;
-    gap: 0;
-  }
-  .Wrapper #HeroSection .text-wrapper .heading {
-    margin-top: 2rem;
-  }
-  .Wrapper #HeroSection .text-wrapper .heading h1 {
-    font-size: 3.5rem;
-    font-weight: 500;
-    line-height: 1.1em;
-  }
-  .Wrapper #HeroSection .text-wrapper .subtitle h4 {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-  }
-  .Wrapper #HeroSection .custom-prev,
-  .Wrapper #HeroSection .custom-next {
-    font-size: 1rem;
-    font-weight: "";
-    line-height: "";
-  }
-  .Wrapper #HeroSection .custom-prev {
-    bottom: 1rem;
-    left: 10%;
-  }
-  .Wrapper #HeroSection .custom-next {
-    bottom: 1rem;
-    right: 10%;
   }
 }
