--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -131,34 +131,7 @@
   right: 40%;
 }
 .Wrapper .grid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 2rem;
   position: relative;
-}
-.Wrapper .grid .galleryHeading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 0;
-  margin-top: 3rem;
-}
-.Wrapper .grid .galleryHeading h1 {
-  font-size: 4rem;
-  font-weight: 700;
-  line-height: "";
-}
-.Wrapper .grid .galleryHeading p {
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: "";
-  width: 55%;
-  font-style: oblique;
-  text-align: center;
-  padding: 5rem 0 0 1rem;
 }
 .Wrapper .grid .row {
   width: 90%;
@@ -723,5 +696,34 @@
     padding-left: 1rem;
     left: 0;
     margin: 0;
+  }
+  .grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+  }
+  .grid .galleryHeading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    width: 100%;
+    margin-top: 2rem;
+  }
+  .grid .galleryHeading h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: "";
+  }
+  .grid .galleryHeading p {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: "";
+    width: 90%;
+    padding: 0;
+    text-align: center;
   }
 }
