--- a/Homepage.scss
+++ b/Homepage.scss
@@ -217,15 +217,9 @@ $WorkSans: "Work Sans", sans-serif;
 	#about {
 		@include flex(column, 0, center, center);
 		margin-top: 2rem;
-		display: none;
 		.aboutHeading {
 			@include flex(row, 0, center, center);
 			width: 90%;
-			h1 {
-				@include fontStyle(5rem, 500, "");
-				width: 30%;
-				text-align: right;
-			}
 			p {
 				@include flex(column, 1rem, center, center);
 				@include fontStyle(2rem, 400, "");
@@ -495,21 +489,6 @@ $WorkSans: "Work Sans", sans-serif;
 			}
 		}
 		.slider {
-			@include flex(column, 0, center, center);
-			padding-top: 1rem;
-			.sliderHeading {
-				@include flex(column, 0, center, center);
-				width: 100%;
-				h2 {
-					@include fontStyle(2rem, 600, "");
-					text-align: center;
-				}
-				p {
-					@include fontStyle(1rem, 500, "");
-					width: 90%;
-					padding: 0;
-				}
-			}
 			.owl-carousel {
 				height: fit-content;
 				.item {
@@ -538,6 +517,60 @@ $WorkSans: "Work Sans", sans-serif;
 			.custom-next {
 				bottom: 0;
 				right: 20%;
+			}
+		}
+		#about {
+			.aboutHeading {
+				@include flex(col, 0, center, center);
+				width: 100%;
+				p {
+					@include flex(column, 0.5rem, center, center);
+					@include fontStyle(1.2rem, 700, "");
+					width: 90%;
+					label {
+						@include fontStyle(0.6rem, 500, "");
+					}
+				}
+			}
+			.aboutDetails {
+				@include flex(column, 0, space-between, center);
+				width: 90%;
+				height: fit-content;
+				.left {
+					@include flex(row, 0, center, center);
+					img {
+						height: 300px;
+						width: 270px;
+						margin-top: 2rem;
+					}
+					.border1 {
+						position: absolute;
+						margin-top: 7rem;
+						height: 400px;
+						width: 295px;
+						border: 3px solid #000;
+					}
+					label {
+						@include fontStyle(2rem, 500, "");
+						position: absolute;
+						bottom: -20%;
+						width: 300px;
+					}
+				}
+				.right {
+					@include flex(column, 1rem, center, center);
+					width: 100%;
+					padding: 6.5rem 0 0 0;
+					text-align: center;
+
+					h1 {
+						@include fontStyle(2rem, 500, "");
+						border-bottom: 3px solid #000;
+					}
+					p {
+						@include fontStyle(1rem, "", "");
+					}
+				}
 			}
 		}
 	}
@@ -580,21 +613,52 @@ $WorkSans: "Work Sans", sans-serif;
 				}
 			}
 		}
-	}
-	.grid {
-		@include flex(column, 0, center, center);
-		.galleryHeading {
+		.slider {
 			@include flex(column, 0, center, center);
-			width: 100%;
-			margin-top: 2rem;
-			h1 {
-				@include fontStyle(2rem, 600, "");
+			padding-top: 1rem;
+			.sliderHeading {
+				@include flex(column, 0, center, center);
+				width: 100%;
+				h2 {
+					@include fontStyle(2rem, 600, "");
+					text-align: center;
+				}
+				p {
+					@include fontStyle(1rem, 500, "");
+					width: 90%;
+					padding: 0;
+				}
 			}
-			p {
-				@include fontStyle(1rem, 500, "");
-				width: 90%;
-				padding: 0;
-				text-align: center;
+		}
+		.grid {
+			@include flex(column, 0, center, center);
+			.galleryHeading {
+				@include flex(column, 0, center, center);
+				width: 100%;
+				margin-top: 2rem;
+				h1 {
+					@include fontStyle(2rem, 600, "");
+				}
+				p {
+					@include fontStyle(1rem, 500, "");
+					width: 90%;
+					padding: 0;
+					text-align: center;
+				}
+			}
+		}
+		#about {
+			.aboutDetails {
+				width: 100%;
+				.right {
+					p {
+						@include fontStyle(1rem, "", "");
+						width: 90%;
+					}
+					button {
+						margin: 0;
+					}
+				}
 			}
 		}
 	}
