--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -238,7 +238,6 @@
   flex-direction: column;
   gap: 0;
   margin-top: 2rem;
-  display: none;
 }
 .Wrapper #about .aboutHeading {
   display: flex;
@@ -247,13 +246,6 @@
   flex-direction: row;
   gap: 0;
   width: 90%;
-}
-.Wrapper #about .aboutHeading h1 {
-  font-size: 5rem;
-  font-weight: 500;
-  line-height: "";
-  width: 30%;
-  text-align: right;
 }
 .Wrapper #about .aboutHeading p {
   display: flex;
@@ -593,35 +585,6 @@
   .Wrapper .grid .row div img {
     margin-bottom: 14px;
   }
-  .Wrapper .slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 0;
-    padding-top: 1rem;
-  }
-  .Wrapper .slider .sliderHeading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 0;
-    width: 100%;
-  }
-  .Wrapper .slider .sliderHeading h2 {
-    font-size: 2rem;
-    font-weight: 600;
-    line-height: "";
-    text-align: center;
-  }
-  .Wrapper .slider .sliderHeading p {
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: "";
-    width: 90%;
-    padding: 0;
-  }
   .Wrapper .slider .owl-carousel {
     height: fit-content;
   }
@@ -650,6 +613,87 @@
   .Wrapper .slider .custom-next {
     bottom: 0;
     right: 20%;
+  }
+  .Wrapper #about .aboutHeading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: col;
+    gap: 0;
+    width: 100%;
+  }
+  .Wrapper #about .aboutHeading p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: "";
+    width: 90%;
+  }
+  .Wrapper #about .aboutHeading p label {
+    font-size: 0.6rem;
+    font-weight: 500;
+    line-height: "";
+  }
+  .Wrapper #about .aboutDetails {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    width: 90%;
+    height: fit-content;
+  }
+  .Wrapper #about .aboutDetails .left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 0;
+  }
+  .Wrapper #about .aboutDetails .left img {
+    height: 300px;
+    width: 270px;
+    margin-top: 2rem;
+  }
+  .Wrapper #about .aboutDetails .left .border1 {
+    position: absolute;
+    margin-top: 7rem;
+    height: 400px;
+    width: 295px;
+    border: 3px solid #000;
+  }
+  .Wrapper #about .aboutDetails .left label {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: "";
+    position: absolute;
+    bottom: -20%;
+    width: 300px;
+  }
+  .Wrapper #about .aboutDetails .right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    padding: 6.5rem 0 0 0;
+    text-align: center;
+  }
+  .Wrapper #about .aboutDetails .right h1 {
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: "";
+    border-bottom: 3px solid #000;
+  }
+  .Wrapper #about .aboutDetails .right p {
+    font-size: 1rem;
+    font-weight: "";
+    line-height: "";
   }
 }
 @media (min-width: 840px) {
@@ -697,14 +741,43 @@
     left: 0;
     margin: 0;
   }
-  .grid {
+  .Wrapper .slider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    padding-top: 1rem;
+  }
+  .Wrapper .slider .sliderHeading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    width: 100%;
+  }
+  .Wrapper .slider .sliderHeading h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: "";
+    text-align: center;
+  }
+  .Wrapper .slider .sliderHeading p {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: "";
+    width: 90%;
+    padding: 0;
+  }
+  .Wrapper .grid {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 0;
   }
-  .grid .galleryHeading {
+  .Wrapper .grid .galleryHeading {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -713,17 +786,29 @@
     width: 100%;
     margin-top: 2rem;
   }
-  .grid .galleryHeading h1 {
+  .Wrapper .grid .galleryHeading h1 {
     font-size: 2rem;
     font-weight: 600;
     line-height: "";
   }
-  .grid .galleryHeading p {
+  .Wrapper .grid .galleryHeading p {
     font-size: 1rem;
     font-weight: 500;
     line-height: "";
     width: 90%;
     padding: 0;
     text-align: center;
+  }
+  .Wrapper #about .aboutDetails {
+    width: 100%;
+  }
+  .Wrapper #about .aboutDetails .right p {
+    font-size: 1rem;
+    font-weight: "";
+    line-height: "";
+    width: 90%;
+  }
+  .Wrapper #about .aboutDetails .right button {
+    margin: 0;
   }
 }
