--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -441,7 +441,6 @@
   gap: 0;
   padding: 2rem;
   position: relative;
-  display: none;
 }
 .Wrapper #contact img {
   height: 42rem;
@@ -791,6 +790,34 @@
   .Wrapper #testimonials .carousel .carousel-control-next span {
     margin-left: 3rem;
   }
+  .Wrapper #contact {
+    padding: 0;
+  }
+  .Wrapper #contact img {
+    height: 20rem;
+  }
+  .Wrapper #contact .contactText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 80%;
+    text-align: center;
+  }
+  .Wrapper #contact .contactText h1 {
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: "";
+  }
+  .Wrapper #contact .contactText p {
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: "";
+  }
+  .Wrapper #contact a {
+    padding: 0.3rem 0.5rem;
+  }
 }
 @media (min-width: 840px) {
   #cross,
@@ -927,5 +954,14 @@
     line-height: "";
     width: 70%;
     padding: 0;
+  }
+  .Wrapper #contact .contactText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    width: 80%;
+    text-align: center;
   }
 }
