--- a/Homepage.scss
+++ b/Homepage.scss
@@ -422,6 +422,7 @@ $WorkSans: "Work Sans", sans-serif;
 @media (max-width: 640px) {
 	.Wrapper {
 		#HeroSection {
+			height: 90vh;
 			.carousel {
 				.carousel-control-prev,
 				.carousel-control-next {
@@ -450,11 +451,11 @@ $WorkSans: "Work Sans", sans-serif;
 				@include fontStyle(1rem, "", "");
 			}
 			.custom-prev {
-				bottom: 1rem;
+				bottom: 0;
 				left: 10%;
 			}
 			.custom-next {
-				bottom: 1rem;
+				bottom: 0;
 				right: 10%;
 			}
 		}
