made herosection  mobile responsive

--- a/Homepage.scss
+++ b/Homepage.scss
@@ -422,7 +422,6 @@ $WorkSans: "Work Sans", sans-serif;
 @media (max-width: 640px) {
 	.Wrapper {
 		#HeroSection {
-			height: 90vh;
 			.carousel {
 				.carousel-control-prev,
 				.carousel-control-next {
@@ -451,11 +450,11 @@ $WorkSans: "Work Sans", sans-serif;
 				@include fontStyle(1rem, "", "");
 			}
 			.custom-prev {
-				bottom: 0;
+				bottom: 0.5rem;
 				left: 10%;
 			}
 			.custom-next {
-				bottom: 0;
+				bottom: 0.5rem;
 				right: 10%;
 			}
 		}
