--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -505,9 +505,6 @@
 }
 
 @media (max-width: 640px) {
-  .Wrapper #HeroSection {
-    height: 90vh;
-  }
   .Wrapper #HeroSection .carousel .carousel-control-prev,
   .Wrapper #HeroSection .carousel .carousel-control-next {
     width: 20%;
@@ -539,11 +536,11 @@
     line-height: "";
   }
   .Wrapper #HeroSection .custom-prev {
-    bottom: 0;
+    bottom: 0.5rem;
     left: 10%;
   }
   .Wrapper #HeroSection .custom-next {
-    bottom: 0;
+    bottom: 0.5rem;
     right: 10%;
   }
   .Wrapper .grid {
