--- a/Homepage.scss
+++ b/Homepage.scss
@@ -435,7 +435,7 @@ $WorkSans: "Work Sans", sans-serif;
 				.heading {
 					margin-top: 2rem;
 					h1 {
-						@include fontStyle(3.5rem, 500, 1.1em);
+						@include fontStyle(3.5rem, "", 1.1em);
 					}
 				}
 				.subtitle {
