--- a/Homepage.scss
+++ b/Homepage.scss
@@ -125,6 +125,11 @@ $WorkSans: "Work Sans", sans-serif;
 	}
 	.grid {
 		position: relative;
+		.galleryHeading {
+			p {
+				color: #5b5656;
+			}
+		}
 		.row {
 			width: 90%;
 			height: 90%;
@@ -153,6 +158,7 @@ $WorkSans: "Work Sans", sans-serif;
 			}
 			p {
 				@include fontStyle(1.5rem, 500, "");
+				color: #5b5656;
 				width: 40%;
 				font-style: oblique;
 				text-align: center;
