--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -131,10 +131,35 @@
   right: 40%;
 }
 .Wrapper .grid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
   position: relative;
 }
+.Wrapper .grid .galleryHeading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 0;
+  margin-top: 3rem;
+}
+.Wrapper .grid .galleryHeading h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: "";
+}
 .Wrapper .grid .galleryHeading p {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: "";
+  width: 55%;
+  font-style: oblique;
   color: #5b5656;
+  text-align: center;
+  padding: 5rem 0 0 1rem;
 }
 .Wrapper .grid .row {
   width: 90%;
